--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,8 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-parent</artifactId>
                 <version>1.2.5.RELEASE</version>
+                <scope>import</scope>
+                <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>io.spring.platform</groupId>
