--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>io.curly</groupId>
     <artifactId>commons</artifactId>
-    <version>1.1.2-SNAPSHOT</version>
+    <version>1.1.3-SNAPSHOT</version>
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -196,7 +196,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-parent</artifactId>
-                <version>Angel.SR3</version>
+                <version>${spring-cloud.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -204,6 +204,7 @@
         </dependencies>
     </dependencyManagement>
     <properties>
+        <spring-cloud.version>Angel.SR3</spring-cloud.version>
         <reactor.version>2.0.3.RELEASE</reactor.version>
         <java.version>1.8</java.version>
         <github.global.server>github</github.global.server>
